--- a/stylesheet/movil.css
+++ b/stylesheet/movil.css
@@ -1,25 +1,47 @@
-@media only screen and (max-device-width: 768px) {
+@media only screen and ((max-device-width: 768px) or (max-device-height: 768px)) {
+
+    #navigation-bar{
+        height: 120px;
+    }
 
     #principal-left {
-        margin-top:50%;
+        margin-top:10%;
         padding: 10px;
         width: 100%;
         font-size: 30px;
         min-width: 100%;
-        grid-row: 2;
+        grid-row: 0;
     }
-
-    #principal-right {
-        
-        padding: 50px;
+    #pannel-text-header{
         grid-row: 1;
         grid-column: 1;
+    }
+    
+    #principal-right {
+        height: calc(100% - var(--websiteHeaderHeight));
+        padding: 50px;
+        grid-row: 2;
+        grid-column: 1;
         min-width: 100%;
-        height: 250%;        
+        height: 250%;
         margin-bottom: var(--websiteFotterHeight);
     }
-
+    #descripcionboda{
+        grid-row: 3;
+        grid-column: 1;
+    }
     #myCarousel{
         width: 100%;
+    }
+
+    #pannel-text{
+        top: 0px;
+    }
+
+    #navigation-letters{
+        width: 40%;
+        color: #783937FF;
+        text-align: left;
+        padding-top: 5%;
     }
 }
