--- a/stylesheet/maqueta.css
+++ b/stylesheet/maqueta.css
@@ -32,6 +32,7 @@ body{
     color: #e8a3a0;
     text-align: left;
     padding-top: 2%;
+    font-family: Lato;
 }
 
 #nav-list{
@@ -86,27 +87,21 @@ li {
 }
 
 #principal{
+    width: 100%;
     top:var(--websiteHeaderHeight);
     position: absolute;
     display: grid;
     height: calc(100% - var(--websiteHeaderHeight));
     bottom: var(--websiteFotterHeight);
     color: #783937FF;
-}
-
-#principal-left{
-    width: 50%;
-    display: grid;
-    
+    grid-template: 'header foto' 
+                   'box foto';
 }
 
 #principal-right{
-    min-width: 50%;
-    display: grid;
-    grid-row: 1;
-    grid-column: 2;
-    width: 700px;
-    /*height: 1000px;*/
+    padding-right: 200px;
+    min-width: 100%;
+    grid-area: foto;
     bottom: var(--websiteFotterHeight);
 }
 
@@ -114,24 +109,32 @@ li {
 #pannel-text{
     justify-content: flex-start;
     color: #783937FF;
-    padding: 5%;
+    padding: 4%;
+    
 }   
 
 #pannel-text-header{
-    grid-row: 1;
-    grid-column: 1;
+    width: 100%;
+    padding: 5%;
+    padding-top: 3%;
+    grid-area: header;
+    
 }
 
 #descripcionboda{
-    grid-row: 2;
-    grid-column: 1;
+    
+    width: 100%;
+    padding: 5%;
+    height: 500px;
+    grid-area: box;
+    padding-right: 0;
 }
 
 #main-letters{    
     align-items: center;
     position: relative;
     z-index: 2;
-    height: 20%;
+    height: 40%;
     margin: 0;
     
     text-align: left;
@@ -222,10 +225,8 @@ li {
 .texto-descripcion p {
     white-space:normal;
     word-wrap:break-word;
-}
-
-#myCarousel{
-    width: 500px;
-    height: 800px;
+    text-transform: none;  
+    font-weight: 100;
+    font-size: 20px;
 }
 
