--- a/stylesheet/movil.css
+++ b/stylesheet/movil.css
@@ -1,37 +1,59 @@
 @media only screen and ((max-device-width: 768px) or (max-device-height: 768px)) {
 
     #navigation-bar{
-        height: 120px;
+        height: 280px;
     }
 
-    #principal-left {
-        margin-top:10%;
-        padding: 10px;
-        width: 100%;
-        font-size: 30px;
-        min-width: 100%;
-        grid-row: 0;
-    }
-    #pannel-text-header{
-        grid-row: 1;
-        grid-column: 1;
+    #navigation-letters{
+        font-size: 130.2px;
+        font-weight: 100;
     }
     
+    #principal{
+        grid-template: 'header' 
+                       'foto'
+                       'box';
+    }
+
+    #principal{
+        width: 600px;
+    }
+
+    #pannel-text-header{
+        padding-top:200px;
+    }
+
+    #main-letters{
+        height:150px;
+    }
+
+    .principal-letters{
+        font-size: 120.2px;
+        font-weight: 400;        
+    }
+
+    .texto-destacado{
+        font-size: 60.2px;
+        font-weight: 300;
+    }
+
+    .texto-informacion{
+        font-weight: 700;
+        font-size: 80px;
+        display: block;
+    }
+
+    .texto-descripcion{
+        font-weight: 400;
+        font-size: 70px;
+        word-break: break-word;
+    }
+
     #principal-right {
         height: calc(100% - var(--websiteHeaderHeight));
         padding: 50px;
-        grid-row: 2;
-        grid-column: 1;
-        min-width: 100%;
-        height: 250%;
         margin-bottom: var(--websiteFotterHeight);
-    }
-    #descripcionboda{
-        grid-row: 3;
-        grid-column: 1;
-    }
-    #myCarousel{
-        width: 100%;
+        align-items: center;
     }
 
     #pannel-text{
@@ -43,5 +65,21 @@
         color: #783937FF;
         text-align: left;
         padding-top: 5%;
+    }
+
+    #descripcionboda{
+        padding-right: 0px;
+        width: 1440px;
+        padding-bottom: 300px;
+    }
+
+    ul,li{
+        width: 100%;
+    }
+    .texto-descripcion p {
+        font-size: 70px;
+    }
+    #parrafoboda{
+        word-break: break-all;
     }
 }
