moved carousel center in phone

--- a/stylesheet/movil.css
+++ b/stylesheet/movil.css
@@ -82,4 +82,10 @@
     #parrafoboda{
         word-break: break-all;
     }
+
+    #myCarousel{
+        left:300px;
+        width: 600px;
+        height: 900px;
+    }
 }
