--- a/stylesheet/maqueta.css
+++ b/stylesheet/maqueta.css
@@ -36,6 +36,7 @@ body{
 }
 
 #nav-list{
+    visibility: visible;
     padding-left: 700px;
     font-size: medium;    
     padding-top: 25px;
@@ -83,7 +84,7 @@ li {
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
-    padding-inline-start: 40px;
+    padding-inline-start: 10px;
 }
 
 #principal{
@@ -228,5 +229,9 @@ li {
     text-transform: none;  
     font-weight: 100;
     font-size: 20px;
+}
+
+#core-button{
+    visibility: hidden;
 }
 
