--- a/stylesheet/movil.css
+++ b/stylesheet/movil.css
@@ -4,6 +4,11 @@
         height: 280px;
     }
 
+    #nav-list{
+        visibility: hidden;
+        height: 0px;
+        width: 0px;
+    }
     #navigation-letters{
         font-size: 130.2px;
         font-weight: 100;
@@ -87,5 +92,45 @@
         left:300px;
         width: 600px;
         height: 900px;
+    }
+
+    #core-button{
+        border: #e8a3a0;
+        background-color: #e8a3a0;
+        color: #783937FF;
+        visibility: visible;
+        width: 200px;
+        height: 200px;
+        font-weight: 700;
+        font-size: 80px;
+        margin-top: 3%;
+        margin-left: 15%;
+        z-index: 1000;
+    }
+
+    #exCollapsingNavbar{
+        width: 70%;
+        height: 100%;
+        right: 0;
+        opacity: 1;    
+        position: fixed;
+        z-index: 500;
+        background-color: #e8a3a0;
+        box-shadow: inset 0 -1px 0 rgb(0 0 0 / 10%);
+    }
+
+    .link-list-collapse{
+        white-space: inherit;
+        font-weight: 700;
+        font-size: 200px;
+    }
+
+    .links-top{
+        font-weight: 700;
+        font-size: 80px;
+        padding-top: 200px;
+    }
+    .li-collapse{
+        padding-top: 200px;
     }
 }
