--- a/stylesheet/movil.css
+++ b/stylesheet/movil.css
@@ -11,7 +11,7 @@
     }
     #navigation-letters{
         font-size: 130.2px;
-        font-weight: 100;
+        font-weight: 700;
     }
     
     #principal{
@@ -45,9 +45,12 @@
     .texto-informacion{
         font-weight: 700;
         font-size: 80px;
-        display: block;
+        display: block;        
     }
 
+    #parrafoboda .texto-informacion{
+        padding-bottom: 80px;
+    }
     .texto-descripcion{
         font-weight: 800;
         font-size: 70px;
