--- a/stylesheet/location.css
+++ b/stylesheet/location.css
@@ -17,8 +17,8 @@
     
     #principal{
         grid-template: 'header' 
-                       'foto'
-                       'box';
+                        'box'
+                       'foto';
         width: 100%;
     }
 
@@ -50,6 +50,7 @@
         padding-bottom: 80px;
     }
     .texto-descripcion{
+        padding-top: 3%;
         font-weight: 300;
         font-size: 60px;
         word-break: break-word;
@@ -135,11 +136,19 @@
     }
     
     #location-left{        
-        padding-left: 30%;
+        padding-left: 20%;
+        padding-top: 2%;  
     }
 
     #texto-location{
-        padding-top: 1%;   
+        padding-top: 2%;   
+    }
+
+    #llevame-button{
+        width: 500px;
+        height: 200px;
+        font-size: 40px;
+        font-weight: 800px;
     }
 }
 
