--- a/stylesheet/base.css
+++ b/stylesheet/base.css
@@ -7,7 +7,7 @@ body{
     font-family: ProximaNova,Helvetica,Arial,sans-serif;
     font-style: normal;
     font-weight: 400;
-    background-image: url("../images/fondo1.webp");
+    background-image: url("../images/fondo.webp");
 }
 
 #navigation-bar{
@@ -252,6 +252,9 @@ li {
     height: 100px;
     font-size: 40px;
     font-weight: 800px;
+    background-image: url('../images/googleMapsIcono.jpg');
+    background-size: 20%;
+    background-repeat: no-repeat;
 }
 
 #texto-location{
