--- a/stylesheet/location.css
+++ b/stylesheet/location.css
@@ -183,6 +183,14 @@
         padding-right:10px;
     }
 
+    .boton-github{
+        font-size: 60px; 
+        width: 60%;        
+        padding-left:50px;
+        padding-right:10px;
+        background-position: 5px;
+    }
+
     #rrss-footer{
         font-size: 50px;
     }
@@ -196,7 +204,7 @@
     
     .foto-rrss{
         height: 700px;
-        padding-left: 10%;
+        padding-left: 20%;
     }
 }
 
