--- a/stylesheet/base.css
+++ b/stylesheet/base.css
@@ -326,9 +326,10 @@ li {
 
 .boton-github   {
     background-image: url('../images/logoGithub.png');
-    background-size: 10%;
+    background-size: 20%;
     background-repeat: no-repeat;    
     font-size: 40px; 
-    padding-left:120px;
+    padding-left:50px;
     padding-right:20px;    
+    background-position: 5px;
 }
