--- a/stylesheet/location.css
+++ b/stylesheet/location.css
@@ -184,6 +184,7 @@
     }
 
     .boton-github{
+        background-size: 15%;
         font-size: 60px; 
         width: 60%;        
         padding-left:50px;
