--- a/stylesheet/base.css
+++ b/stylesheet/base.css
@@ -333,3 +333,10 @@ li {
     padding-right:20px;    
     background-position: 5px;
 }
+
+img{
+    max-width: 100%;
+    max-height: 100%;
+    min-width: 100%;
+    min-height: 100%;
+}
