--- a/stylesheet/movil.css
+++ b/stylesheet/movil.css
@@ -133,7 +133,7 @@
 
     #principal-rrss{
         width: 100%;
-        top:var(--websiteHeaderHeight);
+        top:0px;
         position: absolute;
         display: grid;
         grid-template: 'header' 
@@ -249,6 +249,6 @@
     }
 
     #principal-rrss{
-        padding-top: 80px;
+        padding-top: 80px;        
     }
 }
